feat: :sparkles: Add skills

--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Portfolio de David Tojo." />
 		<title>David Tojo</title>
-		<link
-			rel="icon"
-			type="image/png"
-			href="./assets/icons/favicon.png"
-			sizes="64x64"
-		/>
+		<link rel="icon" type="image/png" href="./assets/icons/favicon.png" sizes="64x64" />
 		<link rel="stylesheet" href="style/resets.css" />
 		<link rel="stylesheet" href="style/index.css" />
 	</head>
@@ -54,18 +49,9 @@
 							title="Perfil de LinkedIn de David Tojo"
 							class="btn all-round"
 						>
-							<img
-								src="assets/icons/linkedin.svg"
-								alt="LinkedIn"
-							/>
+							<img src="assets/icons/linkedin.svg" alt="LinkedIn" />
 						</a>
-						<a
-							href="https://github.com/t19d"
-							target="_blank"
-							rel="noopener"
-							title="Perfil de GitHub de David Tojo"
-							class="btn all-round"
-						>
+						<a href="https://github.com/t19d" target="_blank" rel="noopener" title="Perfil de GitHub de David Tojo" class="btn all-round">
 							<img src="assets/icons/github.svg" alt="GitHub" />
 						</a>
 					</article>
@@ -78,10 +64,7 @@
 
 					<article class="card">
 						<div class="company">
-							<img
-								src="assets/img/companies/cargoffer.jpeg"
-								alt="Cargoffer"
-							/>
+							<img src="assets/img/companies/cargoffer.jpeg" alt="Cargoffer" />
 							<h3>Cargo&shy;ffer</h3>
 						</div>
 
@@ -92,64 +75,29 @@
 							</div>
 
 							<ul>
+								<li>Desarrollo e implementación con Angular e Ionic utilizando TypeScript para crear un front optimizado y dinámico. 💻🎨</li>
+								<li>Uso del framework Express.js con JavaScript para construir un back sólido y adaptable. 🌐🔧</li>
+								<li>Desarrollo con Flask en Python, aprovechando su flexibilidad y facilidad de uso. 🐍🌐</li>
+								<li>Experiencia en el uso de Next.js con React para crear aplicaciones web modernas y dinámicas. ⚛️🌐</li>
+								<li>Gestión eficiente de datos utilizando MongoDB, garantizando un almacenamiento y recuperación de datos óptimos. 📊💾</li>
 								<li>
-									Desarrollo e implementación con Angular e
-									Ionic utilizando TypeScript para crear un
-									front optimizado y dinámico. 💻🎨
+									Colaboración efectiva con GIT para el control de versiones, facilitando la colaboración en equipo y la gestión del código
+									fuente. 🤝🔗
 								</li>
+								<li>Dominio de herramientas e2e como Playwright y Puppeteer. 🛠️🤖</li>
 								<li>
-									Uso del framework Express.js con JavaScript
-									para construir un back sólido y adaptable.
-									🌐🔧
+									Optimización de procesos de datos y consultas en MongoDB para mejorar el rendimiento y la eficiencia de las aplicaciones.
+									🚀🔍
 								</li>
-								<li>
-									Desarrollo con Flask en Python, aprovechando
-									su flexibilidad y facilidad de uso. 🐍🌐
-								</li>
-								<li>
-									Experiencia en el uso de Next.js con React
-									para crear aplicaciones web modernas y
-									dinámicas. ⚛️🌐
-								</li>
-								<li>
-									Gestión eficiente de datos utilizando
-									MongoDB, garantizando un almacenamiento y
-									recuperación de datos óptimos. 📊💾
-								</li>
-								<li>
-									Colaboración efectiva con GIT para el
-									control de versiones, facilitando la
-									colaboración en equipo y la gestión del
-									código fuente. 🤝🔗
-								</li>
-								<li>
-									Dominio de herramientas e2e como Playwright
-									y Puppeteer. 🛠️🤖
-								</li>
-								<li>
-									Optimización de procesos de datos y
-									consultas en MongoDB para mejorar el
-									rendimiento y la eficiencia de las
-									aplicaciones. 🚀🔍
-								</li>
-								<li>
-									Implementación de la plataforma de pago de
-									Stripe para transacciones seguras y
-									eficaces. 💵🫰
-								</li>
-								<li>
-									Diseño de interfaces utilizando Figma. 🎨
-								</li>
+								<li>Implementación de la plataforma de pago de Stripe para transacciones seguras y eficaces. 💵🫰</li>
+								<li>Diseño de interfaces utilizando Figma. 🎨</li>
 							</ul>
 						</div>
 					</article>
 
 					<article class="card">
 						<div class="company">
-							<img
-								src="assets/img/companies/minsait.jpeg"
-								alt="Minsait"
-							/>
+							<img src="assets/img/companies/minsait.jpeg" alt="Minsait" />
 							<h3>Min&shy;sait</h3>
 						</div>
 
@@ -160,42 +108,21 @@
 							</div>
 
 							<ul>
+								<li>Implementación y desarrollo utilizando los frameworks de Angular e Ionic con TypeScript. 🖥️</li>
+								<li>Creación, modificación y despliegue de contenedores e imágenes de Docker para facilitar la infraestructura. 🐳</li>
+								<li>Uso efectivo del Spring Framework para la gestión y optimización de procesos. 🌱</li>
 								<li>
-									Implementación y desarrollo utilizando los
-									frameworks de Angular e Ionic con
-									TypeScript. 🖥️
+									Manipulación y mejora de asistentes de inteligencia artificial (IA) y chatbots contextuales en texto y voz (RASA) utilizando
+									Python. 🤖
 								</li>
 								<li>
-									Creación, modificación y despliegue de
-									contenedores e imágenes de Docker para
-									facilitar la infraestructura. 🐳
+									Adaptación y actualización de código para garantizar la compatibilidad con diferentes navegadores, desde Internet Explorer
+									hasta Edge. 🌐
 								</li>
+								<li>Trabajo con bases de datos tanto SQL como NoSQL para el almacenamiento y gestión eficiente de datos. 🛢️</li>
 								<li>
-									Uso efectivo del Spring Framework para la
-									gestión y optimización de procesos. 🌱
-								</li>
-								<li>
-									Manipulación y mejora de asistentes de
-									inteligencia artificial (IA) y chatbots
-									contextuales en texto y voz (RASA)
-									utilizando Python. 🤖
-								</li>
-								<li>
-									Adaptación y actualización de código para
-									garantizar la compatibilidad con diferentes
-									navegadores, desde Internet Explorer hasta
-									Edge. 🌐
-								</li>
-								<li>
-									Trabajo con bases de datos tanto SQL como
-									NoSQL para el almacenamiento y gestión
-									eficiente de datos. 🛢️
-								</li>
-								<li>
-									Utilización de sistemas de control de
-									versiones SVN y GIT para garantizar la
-									colaboración efectiva y la gestión del
-									código fuente. 🔄
+									Utilización de sistemas de control de versiones SVN y GIT para garantizar la colaboración efectiva y la gestión del código
+									fuente. 🔄
 								</li>
 							</ul>
 						</div>
@@ -203,10 +130,7 @@
 
 					<article class="card">
 						<div class="company">
-							<img
-								src="assets/img/companies/dominiozero.jpeg"
-								alt="DominioZero"
-							/>
+							<img src="assets/img/companies/dominiozero.jpeg" alt="DominioZero" />
 							<h3>Dominio&shy;Zero</h3>
 						</div>
 
@@ -218,30 +142,19 @@
 
 							<ul>
 								<li>Desarrollo de módulos en Prestashop. 💼</li>
+								<li>Creación de sitios web en Wordpress utilizando PHP, HTML, CSS y JavaScript. 🌐</li>
 								<li>
-									Creación de sitios web en Wordpress
-									utilizando PHP, HTML, CSS y JavaScript. 🌐
-								</li>
-								<li>
-									Utilización de diversos plugins de
-									Wordpress, como WPBakery, Slider Revolution,
-									WooCommerce, Justified Image Grid, entre
+									Utilización de diversos plugins de Wordpress, como WPBakery, Slider Revolution, WooCommerce, Justified Image Grid, entre
 									otros. 🛠️
 								</li>
-								<li>
-									Optimización de páginas web para mejorar la
-									experiencia del usuario y el rendimiento. 🚀
-								</li>
+								<li>Optimización de páginas web para mejorar la experiencia del usuario y el rendimiento. 🚀</li>
 							</ul>
 						</div>
 					</article>
 
 					<article class="card">
 						<div class="company">
-							<img
-								src="assets/img/companies/maslenovo.jpeg"
-								alt="MasLenovo"
-							/>
+							<img src="assets/img/companies/maslenovo.jpeg" alt="MasLenovo" />
 							<h3>Mas&shy;Lenovo</h3>
 						</div>
 
@@ -252,39 +165,21 @@
 							</div>
 
 							<ul>
+								<li>Montaje y mantenimiento de sistemas y componentes informáticos. 💻</li>
 								<li>
-									Montaje y mantenimiento de sistemas y
-									componentes informáticos. 💻
-								</li>
-								<li>
-									Instalación y mantenimiento de sistemas
-									operativos, tanto individuales como masivos,
-									incluyendo maquetación e instalación de
+									Instalación y mantenimiento de sistemas operativos, tanto individuales como masivos, incluyendo maquetación e instalación de
 									software ofimático. 🛠️
 								</li>
-								<li>
-									Reparación de ordenadores portátiles, de
-									sobremesa y dispositivos móviles. 📱
-								</li>
-								<li>
-									Mantenimiento y edición de plugins de
-									WordPress para la optimización de sitios
-									web. 🌐
-								</li>
-								<li>
-									Creación de mockups para el diseño de
-									páginas web. 🎨
-								</li>
+								<li>Reparación de ordenadores portátiles, de sobremesa y dispositivos móviles. 📱</li>
+								<li>Mantenimiento y edición de plugins de WordPress para la optimización de sitios web. 🌐</li>
+								<li>Creación de mockups para el diseño de páginas web. 🎨</li>
 							</ul>
 						</div>
 					</article>
 
 					<article class="card">
 						<div class="company">
-							<img
-								src="assets/img/companies/nortempo.jpeg"
-								alt="Nortempo"
-							/>
+							<img src="assets/img/companies/nortempo.jpeg" alt="Nortempo" />
 							<h3>Nor&shy;tempo</h3>
 						</div>
 
@@ -295,46 +190,20 @@
 							</div>
 
 							<ul>
-								<li>
-									Montaje y mantenimiento de sistemas y
-									componentes informáticos. 💻
-								</li>
-								<li>
-									Instalación y mantenimiento de sistemas
-									operativos, tanto individuales como masivos,
-									incluyendo maquetación. 🛠️
-								</li>
-								<li>
-									Instalación y mantenimiento de redes para la
-									transmisión de datos. 🌐
-								</li>
-								<li>
-									Acceso y explotación de bases de datos
-									relacionales. 📊
-								</li>
-								<li>
-									Acceso y mantenimiento de entornos en la
-									nube (servidores de nube) así como
-									herramientas en la nube (Office 365...). ☁️
-								</li>
-								<li>
-									Acceso y administración de Active Directory
-									(creación de usuarios de dominio,
-									mantenimiento...). 👥
-								</li>
-								<li>
-									Gestión de incidencias y documentación. 📝
-								</li>
+								<li>Montaje y mantenimiento de sistemas y componentes informáticos. 💻</li>
+								<li>Instalación y mantenimiento de sistemas operativos, tanto individuales como masivos, incluyendo maquetación. 🛠️</li>
+								<li>Instalación y mantenimiento de redes para la transmisión de datos. 🌐</li>
+								<li>Acceso y explotación de bases de datos relacionales. 📊</li>
+								<li>Acceso y mantenimiento de entornos en la nube (servidores de nube) así como herramientas en la nube (Office 365...). ☁️</li>
+								<li>Acceso y administración de Active Directory (creación de usuarios de dominio, mantenimiento...). 👥</li>
+								<li>Gestión de incidencias y documentación. 📝</li>
 							</ul>
 						</div>
 					</article>
 
 					<article class="card">
 						<div class="company">
-							<img
-								src="assets/img/companies/futuro_digitale.jpeg"
-								alt="FuturoDigitale"
-							/>
+							<img src="assets/img/companies/futuro_digitale.jpeg" alt="FuturoDigitale" />
 							<h3>Futuro Digitale</h3>
 						</div>
 
@@ -345,21 +214,10 @@
 							</div>
 
 							<ul>
-								<li>
-									Mantenimiento de una página web y su base de
-									datos. 🖥️
-								</li>
-								<li>
-									Creación de software para diversos fines. 💻
-								</li>
-								<li>
-									Manejo de Google Sites para la gestión de
-									contenido web. 🌐
-								</li>
-								<li>
-									Comunicación en inglés con colegas de la
-									empresa para colaboraciones y proyectos. 🌍
-								</li>
+								<li>Mantenimiento de una página web y su base de datos. 🖥️</li>
+								<li>Creación de software para diversos fines. 💻</li>
+								<li>Manejo de Google Sites para la gestión de contenido web. 🌐</li>
+								<li>Comunicación en inglés con colegas de la empresa para colaboraciones y proyectos. 🌍</li>
 							</ul>
 						</div>
 					</article>
@@ -375,6 +233,61 @@
 					<header>
 						<h2 class="title-section">Habilidades</h2>
 					</header>
+
+					<div class="technologies">
+						<article class="card">
+							<h3>Frontend</h3>
+
+							<ul>
+								<li><img src="assets/icons/angular.svg" alt="Angular" /></li>
+								<li><img src="assets/icons/astro.svg" alt="Astro" /></li>
+								<li><img src="assets/icons/css-3.svg" alt="CSS" /></li>
+								<li><img src="assets/icons/html-5.svg" alt="HTML5" /></li>
+								<li><img src="assets/icons/ionic.svg" alt="Ionic" /></li>
+								<li><img src="assets/icons/js.svg" alt="JavaScript" /></li>
+								<li><img src="assets/icons/next.svg" alt="Next.js" /></li>
+								<li><img src="assets/icons/react.svg" alt="React" /></li>
+								<li><img src="assets/icons/sass.svg" alt="Sass" /></li>
+								<li><img src="assets/icons/typescript.svg" alt="TypeScript" /></li>
+							</ul>
+						</article>
+
+						<article class="card">
+							<h3>Backend</h3>
+
+							<ul>
+								<li><img src="assets/icons/express.svg" alt="Express.js" /></li>
+								<li><img src="assets/icons/flask.svg" alt="Flask" /></li>
+								<li><img src="assets/icons/java.svg" alt="Java" /></li>
+								<li><img src="assets/icons/node.svg" alt="Node.js" /></li>
+								<li><img src="assets/icons/php.svg" alt="PHP" /></li>
+								<li><img src="assets/icons/python.svg" alt="Python" /></li>
+								<li><img src="assets/icons/spring.svg" alt="Spring Framework" /></li>
+							</ul>
+						</article>
+
+						<article class="card">
+							<h3>Otras</h3>
+
+							<ul>
+								<li><img src="assets/icons/android.svg" alt="Android" /></li>
+								<li><img src="assets/icons/docker.svg" alt="Docker" /></li>
+								<li><img src="assets/icons/figma.svg" alt="Figma" /></li>
+								<li><img src="assets/icons/git.svg" alt="Git" /></li>
+								<li><img src="assets/icons/github-icon.svg" alt="GitHub" /></li>
+								<li><img src="assets/icons/linux-tux.svg" alt="Linux" /></li>
+								<li><img src="assets/icons/mariadb.svg" alt="MariaDB" /></li>
+								<li><img src="assets/icons/microsoft.svg" alt="Windows" /></li>
+								<li><img src="assets/icons/mongo.svg" alt="MongoDB" /></li>
+								<li><img src="assets/icons/mysql.svg" alt="MySQL" /></li>
+								<li><img src="assets/icons/prestashop.svg" alt="PrestaShop" /></li>
+								<li><img src="assets/icons/stripe.svg" alt="Stripe" /></li>
+								<li><img src="assets/icons/unity.svg" alt="Unity" /></li>
+								<li><img src="assets/icons/vs-code.svg" alt="Visual Studio Code" /></li>
+								<li><img src="assets/icons/wordpress.svg" alt="Wordpress" /></li>
+							</ul>
+						</article>
+					</div>
 				</section>
 
 				<section id="me">
@@ -390,59 +303,38 @@
 						<div class="texts">
 							<p>
 								¡Hola! Soy un
-								<span class="yellow"
-									>desarrollador Fullstack</span
-								>, siempre listo para abordar desafíos y
-								absorber conocimiento constantemente 🚀. Mi
-								enfoque versátil me permite trabajar tanto en el
-								<span class="yellow">Frontend</span> como en el
-								<span class="yellow">Backend</span> con fluidez
-								💻🌟.
+								<span class="yellow">desarrollador Fullstack</span>, siempre listo para abordar desafíos y absorber conocimiento constantemente
+								🚀. Mi enfoque versátil me permite trabajar tanto en el <span class="yellow">Frontend</span> como en el
+								<span class="yellow">Backend</span> con fluidez 💻🌟.
 							</p>
 							<div>
 								<p>Algunas de mis fortalezas son:</p>
 								<ul>
 									<li>
 										🛠️
-										<span class="underline"
-											>Resolución de problemas</span
-										>: Disfruto superando obstáculos y
-										encontrando soluciones creativas.
+										<span class="underline">Resolución de problemas</span>: Disfruto superando obstáculos y encontrando soluciones
+										creativas.
 									</li>
 									<li>
 										📅
-										<span class="underline"
-											>Organización</span
-										>: Soy meticuloso en la planificación y
-										ejecución de tareas.
+										<span class="underline">Organización</span>: Soy meticuloso en la planificación y ejecución de tareas.
 									</li>
 									<li>
 										📚
-										<span class="underline"
-											>Gestión multitarea</span
-										>: Puedo manejar varios proyectos
-										simultáneamente sin comprometer la
+										<span class="underline">Gestión multitarea</span>: Puedo manejar varios proyectos simultáneamente sin comprometer la
 										calidad.
 									</li>
 									<li>
 										🤝
-										<span class="underline"
-											>Trabajo en equipo</span
-										>: Valoro la colaboración y la sinergia
-										que se logra al trabajar en conjunto. Me
-										gusta ayudar a mis compañer@s para
-										mejorar de manera conjunta.
+										<span class="underline">Trabajo en equipo</span>: Valoro la colaboración y la sinergia que se logra al trabajar en
+										conjunto. Me gusta ayudar a mis compañer@s para mejorar de manera conjunta.
 									</li>
 								</ul>
 							</div>
 							<p>
-								A lo largo de mi carrera, he aprendido a mejorar
-								mi enfoque laboral. Aunque tiendo a ser
-								perfeccionista, estoy trabajando para equilibrar
-								la calidad y la eficiencia ⚖️. Reconozco la
-								importancia de la colaboración en equipo, lo que
-								acelera el proceso de resolución de problemas y
-								fomenta un ambiente de aprendizaje continuo 🤝.
+								A lo largo de mi carrera, he aprendido a mejorar mi enfoque laboral. Aunque tiendo a ser perfeccionista, estoy trabajando para
+								equilibrar la calidad y la eficiencia ⚖️. Reconozco la importancia de la colaboración en equipo, lo que acelera el proceso de
+								resolución de problemas y fomenta un ambiente de aprendizaje continuo 🤝.
 							</p>
 						</div>
 					</article>
