feat: :sparkles: Add tooltip

--- a/index.html
+++ b/index.html
@@ -239,16 +239,43 @@
 							<h3>Frontend</h3>
 
 							<ul>
-								<li><img src="assets/icons/angular.svg" alt="Angular" /></li>
-								<li><img src="assets/icons/astro.svg" alt="Astro" /></li>
-								<li><img src="assets/icons/css-3.svg" alt="CSS" /></li>
-								<li><img src="assets/icons/html-5.svg" alt="HTML5" /></li>
-								<li><img src="assets/icons/ionic.svg" alt="Ionic" /></li>
-								<li><img src="assets/icons/js.svg" alt="JavaScript" /></li>
-								<li><img src="assets/icons/next.svg" alt="Next.js" /></li>
-								<li><img src="assets/icons/react.svg" alt="React" /></li>
-								<li><img src="assets/icons/sass.svg" alt="Sass" /></li>
-								<li><img src="assets/icons/typescript.svg" alt="TypeScript" /></li>
+								<li>
+									<img src="assets/icons/angular.svg" alt="Angular" />
+									<span class="tooltip">Angular</span>
+								</li>
+								<li>
+									<img src="assets/icons/astro.svg" alt="Astro" />
+									<span class="tooltip">Astro</span>
+								</li>
+								<li>
+									<img src="assets/icons/css-3.svg" alt="CSS" />
+									<span class="tooltip">CSS</span>
+								</li>
+								<li>
+									<img src="assets/icons/html-5.svg" alt="HTML5" />
+									<span class="tooltip">HTML5</span>
+								</li>
+								<li>
+									<img src="assets/icons/ionic.svg" alt="Ionic" />
+									<span class="tooltip">Ionic</span>
+								</li>
+								<li>
+									<img src="assets/icons/js.svg" alt="JavaScript" />
+									<span class="tooltip">JavaScript</span>
+								</li>
+								<li><img src="assets/icons/next.svg" alt="Next.js" /><span class="tooltip">Next.js</span></li>
+								<li>
+									<img src="assets/icons/react.svg" alt="React" />
+									<span class="tooltip">React</span>
+								</li>
+								<li>
+									<img src="assets/icons/sass.svg" alt="Sass" />
+									<span class="tooltip">Sass</span>
+								</li>
+								<li>
+									<img src="assets/icons/typescript.svg" alt="TypeScript" />
+									<span class="tooltip">TypeScript</span>
+								</li>
 							</ul>
 						</article>
 
@@ -256,13 +283,34 @@
 							<h3>Backend</h3>
 
 							<ul>
-								<li><img src="assets/icons/express.svg" alt="Express.js" /></li>
-								<li><img src="assets/icons/flask.svg" alt="Flask" /></li>
-								<li><img src="assets/icons/java.svg" alt="Java" /></li>
-								<li><img src="assets/icons/node.svg" alt="Node.js" /></li>
-								<li><img src="assets/icons/php.svg" alt="PHP" /></li>
-								<li><img src="assets/icons/python.svg" alt="Python" /></li>
-								<li><img src="assets/icons/spring.svg" alt="Spring Framework" /></li>
+								<li>
+									<img src="assets/icons/express.svg" alt="Express.js" />
+									<span class="tooltip">Express.js</span>
+								</li>
+								<li>
+									<img src="assets/icons/flask.svg" alt="Flask" />
+									<span class="tooltip">Flask</span>
+								</li>
+								<li>
+									<img src="assets/icons/java.svg" alt="Java" />
+									<span class="tooltip">Java</span>
+								</li>
+								<li>
+									<img src="assets/icons/node.svg" alt="Node.js" />
+									<span class="tooltip">Node.js</span>
+								</li>
+								<li>
+									<img src="assets/icons/php.svg" alt="PHP" />
+									<span class="tooltip">PHP</span>
+								</li>
+								<li>
+									<img src="assets/icons/python.svg" alt="Python" />
+									<span class="tooltip">Python</span>
+								</li>
+								<li>
+									<img src="assets/icons/spring.svg" alt="Spring Framework" />
+									<span class="tooltip">Spring</span>
+								</li>
 							</ul>
 						</article>
 
@@ -270,21 +318,66 @@
 							<h3>Otras</h3>
 
 							<ul>
-								<li><img src="assets/icons/android.svg" alt="Android" /></li>
-								<li><img src="assets/icons/docker.svg" alt="Docker" /></li>
-								<li><img src="assets/icons/figma.svg" alt="Figma" /></li>
-								<li><img src="assets/icons/git.svg" alt="Git" /></li>
-								<li><img src="assets/icons/github-icon.svg" alt="GitHub" /></li>
-								<li><img src="assets/icons/linux-tux.svg" alt="Linux" /></li>
-								<li><img src="assets/icons/mariadb.svg" alt="MariaDB" /></li>
-								<li><img src="assets/icons/microsoft.svg" alt="Windows" /></li>
-								<li><img src="assets/icons/mongo.svg" alt="MongoDB" /></li>
-								<li><img src="assets/icons/mysql.svg" alt="MySQL" /></li>
-								<li><img src="assets/icons/prestashop.svg" alt="PrestaShop" /></li>
-								<li><img src="assets/icons/stripe.svg" alt="Stripe" /></li>
-								<li><img src="assets/icons/unity.svg" alt="Unity" /></li>
-								<li><img src="assets/icons/vs-code.svg" alt="Visual Studio Code" /></li>
-								<li><img src="assets/icons/wordpress.svg" alt="Wordpress" /></li>
+								<li>
+									<img src="assets/icons/android.svg" alt="Android" />
+									<span class="tooltip">Android</span>
+								</li>
+								<li>
+									<img src="assets/icons/docker.svg" alt="Docker" />
+									<span class="tooltip">Docker</span>
+								</li>
+								<li>
+									<img src="assets/icons/figma.svg" alt="Figma" />
+									<span class="tooltip">Figma</span>
+								</li>
+								<li>
+									<img src="assets/icons/git.svg" alt="Git" />
+									<span class="tooltip">Git</span>
+								</li>
+								<li>
+									<img src="assets/icons/github-icon.svg" alt="GitHub" />
+									<span class="tooltip">GitHub</span>
+								</li>
+								<li>
+									<img src="assets/icons/linux-tux.svg" alt="Linux" />
+									<span class="tooltip">Linux</span>
+								</li>
+								<li>
+									<img src="assets/icons/mariadb.svg" alt="MariaDB" />
+									<span class="tooltip">MariaDB</span>
+								</li>
+								<li>
+									<img src="assets/icons/microsoft.svg" alt="Windows" />
+									<span class="tooltip">Windows</span>
+								</li>
+								<li>
+									<img src="assets/icons/mongo.svg" alt="MongoDB" />
+									<span class="tooltip">MongoDB</span>
+								</li>
+								<li>
+									<img src="assets/icons/mysql.svg" alt="MySQL" />
+									<span class="tooltip">MySQL</span>
+								</li>
+								<li>
+									<img src="assets/icons/prestashop.svg" alt="PrestaShop" />
+									<span class="tooltip">PrestaShop</span>
+								</li>
+								<li>
+									<img src="assets/icons/stripe.svg" alt="Stripe" />
+									<span class="tooltip">Stripe</span>
+								</li>
+								<li>
+									<img src="assets/icons/unity.svg" alt="Unity" />
+									<span class="tooltip">Unity</span>
+								</li>
+								<li>
+									<img src="assets/icons/vs-code.svg" alt="Visual Studio Code" />
+									<span class="tooltip">VSCode</span>
+								</li>
+								<li>
+									<img src="assets/icons/wordpress.svg" alt="Wordpress" />
+									<span class="tooltip">Wordpress</span>
+								</li>
 							</ul>
 						</article>
 					</div>
