feat: :sparkles: Add functionality to download cv button

--- a/index.html
+++ b/index.html
@@ -444,5 +444,6 @@
 		<footer></footer>
 		<script src="js/background-gradient.js"></script>
 		<script src="js/menu-scroll-effect.js"></script>
+		<script src="js/download-cv.js"></script>
 	</body>
 </html>
