feat: :sparkles: Prevent selection

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 
 	<body>
-		<header class="menu">
+		<header class="menu no-text-select">
 			<div class="max-width">
 				<a class="logo" href="#top">
 					<img src="assets/img/logo.png" alt="Logotipo" />
@@ -35,7 +35,7 @@
 		<main>
 			<div class="background-gradient"></div>
 			<div class="max-width">
-				<section id="top">
+				<section id="top" class="no-text-select">
 					<article class="me-title">
 						<img src="assets/img/me.png" alt="David Tojo" />
 						<h1>David Tojo</h1>
@@ -236,7 +236,7 @@
 
 					<div class="technologies">
 						<article class="card">
-							<h3>Frontend</h3>
+							<h3 class="no-text-select">Frontend</h3>
 
 							<ul>
 								<li>
@@ -280,7 +280,7 @@
 						</article>
 
 						<article class="card">
-							<h3>Backend</h3>
+							<h3 class="no-text-select">Backend</h3>
 
 							<ul>
 								<li>
@@ -315,7 +315,7 @@
 						</article>
 
 						<article class="card">
-							<h3>Otras</h3>
+							<h3 class="no-text-select">Otras</h3>
 
 							<ul>
 								<li>
