feat: :sparkles: Optimize images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Portfolio de David Tojo." />
 		<title>David Tojo</title>
-		<link rel="icon" type="image/png" href="./assets/icons/favicon.png" sizes="64x64" />
+		<link rel="icon" type="image/png" href="assets/img/me.png" sizes="64x64" />
 		<link rel="stylesheet" href="style/resets.css" />
 		<link rel="stylesheet" href="style/index.css" />
 	</head>
@@ -15,7 +15,7 @@
 		<header class="menu no-text-select">
 			<div class="max-width">
 				<a class="logo" href="#top">
-					<img src="assets/img/logo.png" alt="Logotipo" />
+					<img src="assets/img/logo.webp" alt="Logotipo" />
 				</a>
 
 				<nav>
@@ -390,7 +390,7 @@
 
 					<article>
 						<div class="image">
-							<img src="assets/img/me.jpeg" alt="David Tojo" />
+							<img src="assets/img/me.jpeg" loading="lazy" alt="David Tojo" />
 						</div>
 
 						<div class="texts">
