feat: :sparkles: Add contact section

--- a/index.html
+++ b/index.html
@@ -450,11 +450,43 @@
 					<header>
 						<h2 class="title-section">Contacto</h2>
 					</header>
+
+					<article class="card">
+						<p>
+							Si deseas ponerte en <span class="yellow">contacto conmigo</span>, no dudes en <span class="underline">enviarme un mensaje</span>.
+							Estoy <span class="yellow">disponible</span> para colaboraciones, consultas o simplemente para charlar sobre proyectos interesantes.
+						</p>
+					</article>
+
+					<article class="links">
+						<ul>
+							<li>
+								<a
+									href="https://www.linkedin.com/in/david-tojo-yebra-581533176/"
+									target="_blank"
+									rel="noopener"
+									title="Perfil de LinkedIn de David Tojo"
+									class="btn all-round"
+								>
+									<img src="assets/icons/linkedin.svg" alt="LinkedIn" />
+								</a>
+							</li>
+							<li>
+								<a href="https://github.com/t19d" target="_blank" rel="noopener" title="Perfil de GitHub de David Tojo" class="btn all-round">
+									<img src="assets/icons/github.svg" alt="GitHub" />
+								</a>
+							</li>
+							<li>
+								<a href="mailto:proyectostoyedev@gmail.com" title="Enviar correo electrónico a David Tojo" class="btn all-round">
+									<img src="assets/icons/email.svg" alt="Correo electrónico" />
+								</a>
+							</li>
+						</ul>
+					</article>
 				</section>
 			</div>
 		</main>
 
-		<footer></footer>
 		<script src="js/background-gradient.js"></script>
 		<script src="js/menu-scroll-effect.js"></script>
 		<script src="js/close-menu.js"></script>
