feat: :sparkles: Improve contact

--- a/index.html
+++ b/index.html
@@ -453,9 +453,17 @@
 
 					<article class="card">
 						<p>
-							Si deseas ponerte en <span class="yellow">contacto conmigo</span>, no dudes en <span class="underline">enviarme un mensaje</span>.
-							Estoy <span class="yellow">disponible</span> para colaboraciones, consultas o simplemente para charlar sobre proyectos interesantes.
+							¡En resumen, estoy en un viaje 🧳 <span class="yellow">constante de mejora</span> personal y profesional! Cada día, trabajo para ser
+							más <span class="underline">eficiente</span> 🤖, <span class="underline">colaborativo</span> 🤝 y
+							<span class="underline">adaptable</span> en mi enfoque laboral 🧑‍💼. Estoy emocionado por las oportunidades de crecimiento 🪴 que me
+							esperan y estoy comprometido a seguir <span class="yellow">evolucionando</span> como profesional 💡.
 						</p>
+						<p>
+							Si deseas ponerte en <span class="yellow">contacto conmigo</span>, no dudes en <span class="underline">enviarme un mensaje</span>.
+							Estoy <span class="yellow">disponible</span> para <span class="underline">colaboraciones</span>,
+							<span class="underline">consultas</span> o simplemente para <span class="underline">charlar</span> sobre proyectos interesantes.
+						</p>
+						<p><span class="yellow">¡Hablemos!</span> 🚀📩</p>
 					</article>
 
 					<article class="links">
