--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Portfolio de David Tojo." />
+		<meta property="og:image" content="assets/img/me.png" />
 		<title>David Tojo</title>
 		<link rel="icon" type="image/png" href="assets/img/me.png" sizes="64x64" />
 		<link rel="stylesheet" href="style/resets.css" />
