--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="Portfolio de David Tojo." />
 		<meta property="og:image" content="assets/img/me.png" />
 		<title>David Tojo</title>
+		<link rel="image_src" href="assets/img/me.png">
 		<link rel="icon" type="image/png" href="assets/img/me.png" sizes="64x64" />
 		<link rel="stylesheet" href="style/resets.css" />
 		<link rel="stylesheet" href="style/index.css" />
