feat: :sparkles: Update CV and dates

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<div class="details">
 							<div class="top">
 								<h3>Programador FullStack</h3>
-								<span>2023-04-28 | Actualidad</span>
+								<span>2023-04-28 | 2024-04-29</span>
 							</div>
 
 							<ul>
