feat: :sparkles: Update opengraph properties

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Portfolio de David Tojo." />
-		<meta property="og:image" content="assets/img/me.png" />
+		<!-- Facebook -->
+		<meta property="og:url" content="https://t19d.github.io" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="David Tojo" />
+		<meta property="og:description" content="Portfolio de David Tojo." />
+		<meta property="og:site_name" content="David Tojo" />
+		<meta property="og:image" content="https://t19d.github.io/assets/img/me.png" />
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="David Tojo" />
+		<meta name="twitter:description" content="Portfolio de David Tojo." />
+		<meta name="twitter:url" content="https://t19d.github.io" />
+		<meta name="twitter:image" content="https://t19d.github.io/assets/img/me.png" />
+
+		<link rel="canonical" href="https://t19d.github.io" />
 		<title>David Tojo</title>
-		<link rel="image_src" href="assets/img/me.png">
-		<link rel="icon" type="image/png" href="assets/img/me.png" sizes="64x64" />
+		<link rel="image_src" href="https://t19d.github.io/assets/img/me.png" />
+		<link rel="icon" type="image/png" href="https://t19d.github.io/assets/img/me.png" sizes="64x64" />
 		<link rel="stylesheet" href="style/resets.css" />
 		<link rel="stylesheet" href="style/index.css" />
 	</head>
