feat: :sparkles: Update experience

--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
 									Utilización de sistemas de control de versiones SVN y GIT para garantizar la colaboración efectiva y la gestión del código
 									fuente. 🔄
 								</li>
+								<li>
+									Integración y automatización de procesos de CI/CD utilizando Jenkins para asegurar un flujo de trabajo eficiente y continuo.
+									🔧
+								</li>
 							</ul>
 						</div>
 					</article>
