feat: :sparkles: Update experience and photos

--- a/index.html
+++ b/index.html
@@ -93,6 +93,29 @@
 
 					<article class="card">
 						<div class="company">
+							<img src="assets/img/companies/thewhiteam.jpeg" alt="The Whiteam" />
+							<h3>The Whiteam</h3>
+						</div>
+
+						<div class="details">
+							<div class="top">
+								<h3>Frontend Developer</h3>
+								<span>2024-09-23 | actualidad</span>
+							</div>
+
+							<ul>
+								<li>Desarrollo e implementación con Angular utilizando TypeScript para crear un front optimizado y dinámico. 💻🎨</li>
+								<li>
+									Colaboración efectiva con GIT para el control de versiones, facilitando la colaboración en equipo y la gestión del código
+									fuente. 🤝🔗
+								</li>
+								<li>Dominio de herramientas de testing unitario como Jasmine, Karma y Jest. 🛠️🤖</li>
+							</ul>
+						</div>
+					</article>
+
+					<article class="card">
+						<div class="company">
 							<img src="assets/img/companies/cargoffer.jpeg" alt="Cargoffer" />
 							<h3>Cargo&shy;ffer</h3>
 						</div>
