feat: :sparkles: Update experience

--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@
 									fuente. 🤝🔗
 								</li>
 								<li>Dominio de herramientas de testing unitario como Jasmine, Karma y Jest. 🛠️🤖</li>
+								<li>
+									Uso avanzado de bibliotecas como Angular Material y PrimeNG para el diseño de componentes visuales consistentes, accesibles
+									y adaptativos. 🎨📦
+								</li>
+								<li>
+									Monitorización y análisis de calidad del código con Sonar, garantizando estándares óptimos y reducción de deuda técnica.
+									📊✔️
+								</li>
+								<li>
+									Implementación de principios de accesibilidad web (WAI-ARIA) para asegurar interfaces inclusivas y cumplir con normativas de
+									accesibilidad. 🌐♿
+								</li>
 							</ul>
 						</div>
 					</article>
